# cq-cpp

./: .gitignore  CMakeLists.txt  README.md  bert-sample.cpp  doc_store_generation.py
model/: .gitattributes  codebook.pt  codebook.txt  colbert_linear_layer_weights.pt  colbert_linear_layer_weights.txt  composition_c_e_linear_bias.pt  composition_c_e_linear_bias.txt  composition_c_e_linear_weights.pt  composition_c_e_linear_weights.txt  model.proto
output/: output.trec
src/: config.h  utils.h
src/becr/: becrcompute.cc  becrcompute.h
src/bert/: CMakeLists.txt  bertcompute.cc  bertcompute.h  convert_python_pb.py  dense.cc  model.pb.cc  tokenizer.h
src/colbert/: queryencoder.cc  queryencoder.h  score.cc  score.h
src/cq/: codefetcher.cc  codefetcher.h  decoder.cc  decoder.h  execute_cq.cc  execute_cq.h  querymapping.cc  querymapping.h  queryprocessor.cc  queryprocessor.h
test/: doc0_D_final.txt  doc0_static_embs.txt  doc0_tokens.txt  doc0_values.txt  doc1_D_final.txt  doc1_values.txt  final_doc_embeddings.txt  query_normalize_out.txt
